# zbricks-echo

./: .gitignore  README.md  README2.md  alpha-one.md  app.py  config.py  dump.py  load_env.sh  pyproject.toml  random-four-Untitled-1.md  randomstuff-2.md  requirements.txt  sample-delta.py  site-template.zhtml
.github/workflows/: python-package.yml
_OLD/tests/: helpers.py  oldtest_features-all.py
_OLD/zbricks/: __init__.py  extensions.py
_OLD/zbricks/auth/: __init__.py  schemas.py
_OLD/zbricks/logging/: __init__.py
docs/: dump.md  foo.md  notes.md  random-Untitled-3.md  storyboard-docs.md  video-idea.md
tests/: BROKENtest_event_dispatcher.py  BROKENtest_wsgi.py  conftest.py  steps.py  test_all_features.py  test_basics.py  test_brick.py  test_decorator.py  test_dev.py  test_event_dispatcher.py  test_flask_brick.py  test_implementation.py  test_manual_auth_routes.py  test_signals.py  test_wsgi.py
tests/bdd/: test_system_response.py
tests/bdd/features/: system-responds.feature
tests/core/: test_zevent.py  test_zmachine_signals.py
tests/features/: routing-basic.feature  routing-events.feature  routing-exceptions.feature
tests/features/auth/: auth-routes.feature
tests/features/events/: events.feature  (+1 more)
tests/flask/: test_blueprint.py  test_extension.py  test_flask_brick.py  test_sqlalchemy_brick.py  test_templating_blueprint.py
tests/machines/: test_request_response.py
tests/steps/: __init__.py
tests/zbrick/: test_attachable.py  test_attachments.py
zbricks/: __init__.py  __main__.py  base.py  cli.py  config.py  core.py  extensions.py  live.py
zbricks/augmentations/: __init__.py  base.py  call.py  event.py
zbricks/auth/: __init__.py  blueprint.py  models.py  signals.py
zbricks/base/: __init__.py  base.py  decorators.py
zbricks/bricks/: __init__.py  base.py  flask.py
zbricks/core/: __init__.py  bases.py  entities.py  events.py  types.py  zbricks.py  zmachine.py
zbricks/events/: __init__.py
zbricks/logging/: __init__.py
zbricks/machines/: request_response.py
zbricks/studs/: __init__.py  base.py  data.py
zbricks/templates/: base.html
(+26 files in other folders)
