[tool.poetry]
name = "zbricks"
version = "0.2.0"
description = "A framework providing ready-to-use bricks for rapid development"
authors = ["zdeyn <i.am.zdeyn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
requests = "^2.32.3"
Authlib = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-bdd = "^7.2.0"
mypy = "^1.10.0"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_should.py", "tests.py"]
python_classes = ["Test", "Should"]
python_functions = ["test", "should"]
addopts = "-q -cov-report=term-missing" # --cov=zbricks -
bdd_features_base_dir = "tests"
